<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:id = "@+id/nickname"
            android:imeOptions="actionDone"
            android:hint = "@string/signup_hint_nickname"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:id = "@+id/email"
            android:imeOptions="actionDone"
            android:hint = "@string/signup_hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:id = "@+id/password"
            android:imeOptions="actionDone"
            android:hint = "@string/signup_hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:id = "@+id/conf_password"
            android:imeOptions="actionDone"
            android:hint = "@string/signup_hint_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btn_conf"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:text="@string/signup_confirm_btn"
            android:background="@drawable/background_shape"/>

    </LinearLayout>

</ScrollView>