<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:id = "@+id/email"
            android:imeOptions="actionDone"
            android:hint = "@string/hint_for_login_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:id = "@+id/password"
            android:imeOptions="actionDone"
            android:hint = "@string/hint_for_login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_log"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:text="@string/login_btn"
            android:background="@drawable/background_shape"/>

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:text="@string/signup_btn"
            android:background="@drawable/background_shape"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>