<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:text="@string/main_menu_play_btn"
            android:background="@drawable/background_shape"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:text="@string/main_menu_select_wizard_btn"
            android:background="@drawable/background_shape"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:text="@string/main_menu_exit_btn"
            android:background="@drawable/background_shape"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>